# battleships

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  Client.cpp  Client.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameConfig.h  GameTypes.h  Human.cpp  Human.h  InputHandler.cpp  InputHandler.h  NetworkConnection.h  NetworkTransfer.cpp  NetworkTransfer.h  Player.cpp  Player.h  README.md  Server.cpp  Server.h  Ship.cpp  Ship.h  main.cpp
